komplettes Onboarding für Ernährungsziele mit anschließender Kalorienberechnung implementiert

--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "test": "tsx src/utils/__tests__/planRecommendationScoring.test.ts",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:nutrition": "jest __tests__/nutrition-calculator.test.ts",
     "test:auth": "tsx src/tests/auth.test.ts --quick",
     "test:auth:all": "tsx src/tests/auth.test.ts --all",
     "test:auth:simple": "tsx src/tests/auth.test.simple.ts",
